[tool.poetry]
name = "sepacetamol"
version = "0.1.0"
description = "PAIN Credit Transfer XML file generator"
authors = ["Yury V. Zaytsev <yury@shurup.com>"]

[tool.poetry.dependencies]
python = "~3.12"

django = "*"
django-bootstrap5 = "*"
gunicorn = "*"
whitenoise = { version = "*", extras = ["brotli"] }

openpyxl = "*"
schwifty = "*"
sepaxml = "*"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "*"

ruff = "*"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

